in the ILCD exports: make the exported object final